# Hubspot-AI-AGENT

./: .gitignore  README.md  config.py  pyproject.toml  token.json
app/: LICENSE  README.md  config.py  groq_client.py  main.py  pyproject.toml  token.json
app/core/: server.py
app/core/logger/: log_handler.py  log_viewer.html  log_viewer_service.py  logger.py
app/core/middlewares/: middleware.py
app/core/utils/: __init__.py  utils.py
app/modules/ai_agent/: ai_routes.py  groq_client.py  intent.py  schema.py
app/modules/ai_agent/contacts/: __init__.py  contact_tools.py
app/modules/ai_agent/tools/: create_contact.json  (+3 more)
app/modules/auth/: auth_routes.py  constant.py  routes.py  token_manager.py
app/modules/healthcheck/: healthcheck_routes.py  routes.py
app/modules/logviewer/: log_viewer_routes.py  routes.py
core/: server.py
core/utils/: __init__.py  utils.py
modules/ai_agent/: ai_routes.py  groq_client.py  intent.py  schema.py  system_Prompt.py
modules/ai_agent/contacts/: contact_tools.py
modules/ai_agent/tools/: create_contact.json  delete_contact.json  get_contact.json  search_by_indetifier.json  update_contact.json
modules/auth/: auth_routes.py  constant.py  routes.py  token.json  token_manager.py  user_id.py
modules/celery/: celery_ini.py  tasks.py  watcher_mongo.py
modules/crud_ops/contacts/: contacts_routes.py  routes.py  schema.py
modules/database/mongo_db/: models.py  mongo_client.py  mongo_ops.py
modules/database/redis/: redis_client.py
modules/database/vector_db/: Qdrant.py  vector_search.py  vector_utility.py
(+3 files in other folders)
