[project]
name = "FastCrate"
version = "1.0.0"
description = "Base file structure of fast api"
license = "MIT"
authors = [
    {name = "mubashir-ahmed", email = "mubashirsidiki@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.12"
dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0) ; sys_platform == \"linux\"",
    "openai (>=1.78.1,<2.0.0)",
    "api-analytics[fastapi]>=1.2.7",
    "groq>=0.31.0",
    "pydantic>=2.11.7",
    "instructor>=1.10.0",
    "redis>=6.4.0",
    "pymongo[srv]>=4.15.3",
    "qdrant-client>=1.15.1",
    "celery>=5.5.3",
    "sentence-transformers>=5.1.2",
]
